# paperGraph

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  test_llm.py
.ideas/: api-specifications.md  papergraph-prd.md  pr-acceptance-criteria.md  pr-roadmap-status.md  pr1-scaffolding.md  pr2-ollama-llm.md  pr3-neo4j-setup.md  pr4-fetcher-agent.md  pr5-kg-builder.md  pr6-query-strategist.md  pr7-orchestrator.md  pr8-streamlit-ui.md  pr9-seeding-system.md  resources-dependencies.md  scope.md  user_flow.md
agents/fetcher/: Dockerfile  agent.py  pyproject.toml
agents/kg_builder/: Dockerfile  agent.py  pyproject.toml
agents/query_strategist/: Dockerfile  agent.py  pyproject.toml
agents/shared/: __init__.py  llm_service.py  neo4j_client.py
orchestrator/: Dockerfile  main.py  pyproject.toml
scripts/: init_schema.py  prepare_seeds.py  setup.sh  setup_ollama.sh  test_fetcher.py  test_neo4j.py  test_system.py
seeds/: .gitkeep
ui/: Dockerfile  app.py  pyproject.toml
