[project]
name = "papergraph-ui"
version = "0.1.0"
description = "PaperGraph Intelligence UI - Streamlit user interface"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "py2neo>=2021.2.4",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]